--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -3,7 +3,18 @@ on:
   pull_request:
     types: 
       - opened
+    branches:
+      - master
+      - feature/*
+      - develop
   workflow_dispatch:
+  push: 
+    branches: 
+      - master
+      - feature/*
+      - develop
+    paths-ignore:
+      - '.github/workflows/*'
 jobs:
   deploy:
     runs-on: ubuntu-latest
