--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -45,12 +45,16 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: dist-files
-          path: |
-            dist
-            package.json
+          path: dist
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Get Build Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: dist-files
+      - name: Output Contents
+        run: ls -la dist
       - name: Deploy to Server
         run: echo "Deploying to Server"
