Update GitHub Actions deployment workflow to simplify output command by changing 'ls -la dist-files' to 'ls' for cleaner artifact listing.

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -55,6 +55,6 @@ jobs:
         with:
           name: dist-files
       - name: Output Contents
-        run: ls -la dist-files
+        run: ls
       - name: Deploy to Server
         run: echo "Deploying to Server"
