--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -9,6 +9,11 @@ jobs:
     steps:
       - name: Get Code
         uses: actions/checkout@v3
+      - name: Cache Dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install NodeJS
         uses: actions/setup-node@v3
         with:
@@ -23,6 +28,11 @@ jobs:
     steps:
       - name: Get Code
         uses: actions/checkout@v3
+      - name: Cache Dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}  
       - name: Install NodeJS
         uses: actions/setup-node@v3
         with:
@@ -39,6 +49,11 @@ jobs:
     steps:
       - name: Get Code
         uses: actions/checkout@v3
+      - name: Cache Dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}    
       - name: Install Dependencies
         run: npm ci
       - name: Build Project
