--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -10,59 +10,57 @@ jobs:
       - name: Get Code
         uses: actions/checkout@v3
       - name: Cache Dependencies
+        id: cache
         uses: actions/cache@v3
         with:
-          path: ~/.npm
+          path: node_modules
           key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
-      - name: Install NodeJS
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
       - name: Install Dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
-      - name: Run Lint
+      - name: Lint Code
         run: npm run lint
   test:
-    needs: lint
     runs-on: ubuntu-latest
     steps:
       - name: Get Code
         uses: actions/checkout@v3
       - name: Cache Dependencies
+        id: cache
         uses: actions/cache@v3
         with:
-          path: ~/.npm
-          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}  
-      - name: Install NodeJS
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
+          path: node_modules
+          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install Dependencies
         run: npm ci
-      - name: Run Tests
-        run: npm test
+      - name: Test Code
+        id: run-tests
+        run: npm run test
+      - name: Upload Test Report
+        if: failure() && steps.run-tests.outcome == 'failure'
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-report
+          path: test.json
   build:
     needs: test
     runs-on: ubuntu-latest
-    outputs:
-      script-files: ${{ steps.publish.outputs.script-files }}
     steps:
       - name: Get Code
         uses: actions/checkout@v3
       - name: Cache Dependencies
+        id: cache
         uses: actions/cache@v3
         with:
-          path: ~/.npm
-          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}    
+          path: node_modules
+          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install Dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
-      - name: Build Project
+      - name: Build Website
         run: npm run build
-      - name: Publish JS Filename
-        id: publish
-        run: find dist/assets/*.js -type f -execdir echo 'script-files={}' >> $GITHUB_OUTPUT ';'
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v3
         with:
           name: dist-files
           path: dist
@@ -70,13 +68,14 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Get Build Artifact
-        uses: actions/download-artifact@v4
+      - name: Get Code
+        uses: actions/checkout@v3
+      - name: Get Build Artifacts
+        uses: actions/download-artifact@v3
         with:
           name: dist-files
+          path: ./dist
       - name: Output Contents
         run: ls
-      - name: Output Filename
-        run: echo ${{ needs.build.outputs.script-files }}
-      - name: Deploy to Server
-        run: echo "Deploying to Server"
+      - name: Deploy Site
+        run: echo "Deploying..."
