--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -79,3 +79,11 @@ jobs:
         run: ls
       - name: Deploy Site
         run: echo "Deploying..."
+  report:
+    if: failure()
+    runs-on: ubuntu-latest
+    steps:
+      - name: Output Information
+        run: |
+          echo "Something went wrong"
+          echo "${{ github }}"
