--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -80,6 +80,7 @@ jobs:
       - name: Deploy Site
         run: echo "Deploying..."
   report:
+    needs: [lint, deploy]
     if: failure()
     runs-on: ubuntu-latest
     steps:
