--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -32,6 +32,7 @@ jobs:
           path: node_modules
           key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install Dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
       - name: Test Code
         id: run-tests
@@ -87,4 +88,4 @@ jobs:
       - name: Output Information
         run: |
           echo "Something went wrong"
-          echo "${{ github }}"
+          echo "${{ toJSON(github) }}"
