--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -1,9 +1,22 @@
 name: Reusable Workflow
-on: workflow_call
+on: 
+  workflow_call:
+    inputs:
+      artifact-name:
+        description: The name of the artifact to deploy
+        required: false
+        type: string
+        default: dist
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-        - name: Output Infomation
-          run: echo "Deploy & Uploading..."
+      - name: Get Code
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ inputs.artifact-name }}
+      - name: List Files
+        run: ls
+      - name: Output Infomation
+        run: echo "Deploy & Uploading..."
       
