Update output command in reusable GitHub Actions workflow to specify success status, enhancing clarity in deployment result tracking.

--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -29,4 +29,4 @@ jobs:
       - name: Output Infomation
         run: echo "Deploy & Uploading..."
       - name: Set Result Output
-        run: echo "step-result" >> $GITHUB_OUTPUT
+        run: echo "step-result=success" >> $GITHUB_OUTPUT
